fix dark mode theming

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -7,7 +7,12 @@
 }
 
 body {
-    background-color: var(--surface-a);
     font-family: var(--font-family);
+    background-color: var(--surface-ground);
     color: var(--text-color);
+    padding: 0;
+    margin: 0;
+    min-height: 100%;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
